# POAR-SRL-4-Robot

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  grads  run_docker_cpu.sh
config/: srl_models.yaml  srl_models_circular.yaml
docs/: make.bat
environments/: collect_ground_truth.py  dataset_generator.py  registry.py  utils.py
environments/JAKA/: jaka.py  jakazu.py
environments/inmoov/: Joints.xlsx  inmoov.py  inmoov_client.py  (+12 more)
replay/: efficiency.py  pipeline.py  plot_atari.py  plot_pipeline.py  plots.py
rl_baselines/: base_classes.py  cross_eval.py  pipeline.py  pipeline_poar.py  registry.py  train.py
script_to_run/: run_comparison_for_MobileRobot.sh  run_comparison_for_OmniRobot.sh  run_poar.sh  run_policy.sh  run_policy_dry_run.sh
stable_baselines/: __init__.py
state_representation/: episode_saver.py  models.py
tests/: test_pipeline.py
urdf/: long_cylinder.urdf
urdf/JAKA/JakaRviz/Zu12/: package.xml  urdf.rviz
urdf/JAKA/JakaRviz/Zu12/launch/: Zu12.launch  display.launch  gazebo.launch
urdf/JAKA/JakaRviz/Zu12/urdf/: Zu12.csv  Zu12.urdf
urdf/JAKA/JakaRviz/Zu3/: package.xml  urdf.rviz
urdf/JAKA/JakaRviz/Zu3/config/: joint_names_Zu3.yaml
urdf/JAKA/JakaRviz/Zu3/launch/: display.launch  gazebo.launch
urdf/JAKA/JakaRviz/Zu3/meshes/: 1.STL  2.STL  3.STL  4.STL  5.STL  6.STL  base_link.STL
urdf/JAKA/JakaRviz/Zu3/urdf/: Zu3-local.urdf
urdf_robot/: addmass.py  inmoov.urdf  inmoov_20191017.urdf  inmoov_col.urdf  inmoov_colmass.urdf  inmoov_fixed.urdf  tomato_plant.urdf  urdf_note.md
util/: color_print.py  urdf_processing.py
(+65 files in other folders)
