<?xml version="1.0"?>
<package format="2">
  <name>Zu12</name>
  <version>0.0.0</version>
  <description>
    <p>URDF Description package for Zu12</p>
    <p>This package contains configuration data, 3D models and launch files for Zu12 robot</p>
  </description>
  <maintainer email="l@todo.todo">l</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>